--- a/templates/linkapp/list.html
+++ b/templates/linkapp/list.html
@@ -1,33 +1,39 @@
-{% extends 'base_generic.html' %}
+{% extends 'base.html' %}
 {% block body %}
+<div class="tm-right-column">
+<div class="tm-content-div">
+        <section id="welcome" class="tm-section">
+        <header>
+            <h2 class="tm-blue-text tm-welcome-title tm-margin-b-45">List of links</h2>
+        </header>
     {% if page_obj %}
-        <ul>
+        <ul class="list-of-links">
         {% for link in page_obj %}
             <li>
                 <br>Redirects: {{ link.redirects }}
                 <br>Short link: <a href="{{ link.shortened_link }}">{{ link.shortened_link }}</a>
                 <br>Full link: <a href="{{ link.shortened_link }}">{{ link.full_link }}</a>
             </li>
+            ______________________________________
         {% endfor %}
         </ul>
     {% else %}
         <li>No links to show</li>
     {% endif %}
-    <div class="pagination">
-    <span class="step-links">
-        {% if  page_obj.has_previous %}
-            <a href="?page=1 ">первый</a>
-            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-        {% endif %}
-
-        <span class="current">
- Страница {{ page_obj.number }} из {{  page_obj.paginator.num_pages }}.
- </span>
-
+        <div class="pagination">
+        <span class="step-links">
+            {% if  page_obj.has_previous %}
+                <a href="?page={{ page_obj.previous_page_number }}"> Previous  </a>
+            {% endif %}
+            <span class="current">
+            Страница {{ page_obj.number }} из {{  page_obj.paginator.num_pages }}.
+            </span>
         {% if  page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">next</a>
-            <a href="?page={{ page_obj.paginator.num_pages }}">последний</a>
+            <a href="?page={{ page_obj.next_page_number }}">  Next </a>
         {% endif %}
-    </span>
+        </span>
+        </div>
+        </section>
+</div>
 </div>
 {% endblock %}
