--- a/templates/linkapp/result.html
+++ b/templates/linkapp/result.html
@@ -1,8 +1,17 @@
-{% extends 'base_generic.html' %}
+{% extends 'base.html' %}
 {% block body %}
-    {% if not error %}
-        Your link is: <a href="{{ link }}">{{ link }}</a>
-    {% else %}
-        Error occurred
-    {% endif %}
+ <div class="tm-right-column">
+        <div class="tm-content-div">
+            <section id="welcome" class="tm-section">
+                <header>
+                    <h2 class="tm-blue-text tm-welcome-title tm-margin-b-45">Welcome to Link App</h2>
+                </header>
+            {% if not error %}
+                <p> Your link is: <a href="{{ link }}">{{ link }}</a> </p>
+            {% else %}
+                Error occurred
+            {% endif %}
+            </section>
+        </div>
+ </div>
 {% endblock %}
