--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="../static/css/main.css">
-       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">  <!-- Google web font "Open Sans" -->
-    <link rel="stylesheet" href="../static/css/bootstrap.min.css">                                      <!-- Bootstrap style -->
-    <link rel="stylesheet" href="../static/css/magnific-popup.css">                                <!-- Magnific pop up style, http://dimsemenov.com/plugins/magnific-popup/ -->
-    <link rel="stylesheet" href="../static/css/templatemo-style.css">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">  <!-- Google web font "Open Sans" -->
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">                                      <!-- Bootstrap style -->
+    <link rel="stylesheet" href="/static/css/magnific-popup.css">                                <!-- Magnific pop up style, http://dimsemenov.com/plugins/magnific-popup/ -->
+    <link rel="stylesheet" href="/static/css/templatemo-style.css">
     <meta charset="UTF-8">
     <title>LinkApp</title>
 </head>
@@ -17,7 +17,7 @@
                     <!-- Left column: logo and menu -->
                     <div class="tm-blue-bg tm-left-column">
                         <div class="tm-logo-div text-xs-center">
-                            <img src="../static/img/logo.png" alt="Logo" class="logo">
+                            <img src="/static/img/logo.png" alt="Logo" class="logo">
                             <h1 class="tm-site-name">Link App</h1>
                         </div>
                         <nav class="tm-main-nav">
@@ -34,8 +34,6 @@
                 </div>
             </div>
         </div>
-
-                    <!-- Right column: content -->
 {% block body %}{% endblock %}
 </body>
 </html>
