--- a/templates/linkapp/result.html
+++ b/templates/linkapp/result.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block body %}
  <div class="tm-right-column">
         <div class="tm-content-div">
             <section id="welcome" class="tm-section">
                 <header>
-                    <h2 class="tm-blue-text tm-welcome-title tm-margin-b-45">Welcome to Link App</h2>
+                    <h2 class="tm-blue-text tm-welcome-title tm-margin-b-45">Your new link:</h2>
                 </header>
             {% if not error %}
-                <p> Your link is: <a href="{{ link }}">{{ link }}</a> </p>
+                <p> <a href="{{ link }}">{{ link }}</a> </p>
             {% else %}
                 Error occurred
             {% endif %}
